--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply flex justify-center items-center h-screen font-sans; /* font-sans is a default Tailwind font stack */
+}
